// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Collection Check snapshots should correct renders 1`] = `
<div
  className="consonant-card-collection"
  data-testid="consonant-collection"
>
  <div
    className="consonant-aspect-ratio-3-2-card"
    data-testid="consonant-card"
    id="13"
  >
    <div
      className="consonant-aspect-ratio-3-2-card--img"
      data-testid="consonant-card--img"
      style={
        Object {
          "backgroundImage": "url(\\"\\")",
        }
      }
    >
      <span
        className="consonant-aspect-ratio-3-2-card--banner"
        data-testid="consonant-card--banner"
        style={
          Object {
            "backgroundColor": "#CB6F10",
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="consonant-aspect-ratio-3-2-card--banner-icon-wrapper"
        >
          <img
            alt=""
            data-testid="consonant-card--banner-icon"
            loading="lazy"
            src="some-banner-icon"
          />
        </div>
        <span>
          Some Banner Description
        </span>
      </span>
      <a
        className="consonant-aspect-ratio-3-2-card--video-ico"
        href="some-video-videoURL"
        rel="noreferrer"
        tabIndex="0"
        target="_blank"
      >
        Open video link
      </a>
    </div>
    <div
      className="consonant-aspect-ratio-3-2-card--inner"
    >
      
      <h2
        className="consonant-aspect-ratio-3-2-card--title"
      >
        13 Infobit
      </h2>
      
      <div
        className="consonant-card-footer consonant-card-footer_divider"
      >
        <div
          className="consonant-card-footer--row"
          data-cells={3}
        >
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_left"
          >
            <img
              alt=""
              className="consonant-icon-infobit"
              loading="lazy"
              src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/pr_mnemonic.svg"
              width="28"
            />
            <img
              alt=""
              className="consonant-icon-infobit"
              loading="lazy"
              src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/lr_mnemonic.svg"
              width="28"
            />
          </div>
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_center"
          >
            <div
              className="consonant-icon-with-text-infobit"
            >
              <img
                alt=""
                height="22"
                loading="lazy"
                src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/grey_star.svg"
              />
              <span
                className="consonant-icon-with-text-infobit--text"
              >
                3.7
              </span>
            </div>
          </div>
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_right"
          >
            <a
              className="consonant-btn-infobit consonant-btn-infobit_cta"
              data-testid="consonant-btn-infobit"
              href=""
              rel="noreferrer"
              tabIndex="0"
              target="_blank"
            >
              <span>
                $9.99
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="consonant-card-collection--placeholder"
  />
  <div
    className="consonant-card-collection--placeholder"
  />
</div>
`;

exports[`Consonant/Collection Check snapshots should renders correctly with different card style 1`] = `
<div
  className="consonant-card-collection"
  data-testid="consonant-collection"
>
  <div
    className="consonant-aspect-ratio-3-2-card"
    data-testid="consonant-card"
    id="13"
  >
    <div
      className="consonant-aspect-ratio-3-2-card--img"
      data-testid="consonant-card--img"
      style={
        Object {
          "backgroundImage": "url(\\"\\")",
        }
      }
    >
      <span
        className="consonant-aspect-ratio-3-2-card--banner"
        data-testid="consonant-card--banner"
        style={
          Object {
            "backgroundColor": "#CB6F10",
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="consonant-aspect-ratio-3-2-card--banner-icon-wrapper"
        >
          <img
            alt=""
            data-testid="consonant-card--banner-icon"
            loading="lazy"
            src="some-banner-icon"
          />
        </div>
        <span>
          Some Banner Description
        </span>
      </span>
      <a
        className="consonant-aspect-ratio-3-2-card--video-ico"
        href="some-video-videoURL"
        rel="noreferrer"
        tabIndex="0"
        target="_blank"
      >
        Open video link
      </a>
    </div>
    <div
      className="consonant-aspect-ratio-3-2-card--inner"
    >
      
      <h2
        className="consonant-aspect-ratio-3-2-card--title"
      >
        13 Infobit
      </h2>
      
      <div
        className="consonant-card-footer consonant-card-footer_divider"
      >
        <div
          className="consonant-card-footer--row"
          data-cells={3}
        >
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_left"
          >
            <img
              alt=""
              className="consonant-icon-infobit"
              loading="lazy"
              src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/pr_mnemonic.svg"
              width="28"
            />
            <img
              alt=""
              className="consonant-icon-infobit"
              loading="lazy"
              src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/lr_mnemonic.svg"
              width="28"
            />
          </div>
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_center"
          >
            <div
              className="consonant-icon-with-text-infobit"
            >
              <img
                alt=""
                height="22"
                loading="lazy"
                src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/grey_star.svg"
              />
              <span
                className="consonant-icon-with-text-infobit--text"
              >
                3.7
              </span>
            </div>
          </div>
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_right"
          >
            <a
              className="consonant-btn-infobit consonant-btn-infobit_cta"
              data-testid="consonant-btn-infobit"
              href=""
              rel="noreferrer"
              tabIndex="0"
              target="_blank"
            >
              <span>
                $9.99
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="consonant-card-collection--placeholder"
  />
  <div
    className="consonant-card-collection--placeholder"
  />
</div>
`;

exports[`Consonant/Collection Check snapshots should renders correctly with different card style 2`] = `
<div
  className="consonant-card-collection"
  data-testid="consonant-collection"
>
  <div
    className="consonant-aspect-ratio-1-1-card"
    data-testid="consonant-card"
    id="13"
  >
    <div
      className="consonant-aspect-ratio-1-1-card--img"
      data-testid="consonant-card--img"
      style={
        Object {
          "backgroundImage": "url(\\"\\")",
        }
      }
    >
      <span
        className="consonant-aspect-ratio-1-1-card--banner"
        data-testid="consonant-card--banner"
        style={
          Object {
            "backgroundColor": "#CB6F10",
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="consonant-aspect-ratio-1-1-card--banner-icon-wrapper"
        >
          <img
            alt=""
            data-testid="consonant-card--banner-icon"
            loading="lazy"
            src="some-banner-icon"
          />
        </div>
        <span>
          Some Banner Description
        </span>
      </span>
      <a
        className="consonant-aspect-ratio-1-1-card--video-ico"
        href="some-video-videoURL"
        rel="noreferrer"
        tabIndex="0"
        target="_blank"
      />
    </div>
    <a
      className="consonant-aspect-ratio-1-1-card--inner"
      href=""
      rel="noreferrer"
      tabIndex="0"
      target="_blank"
      title="Click to open in a new tab"
    >
      
      <h2
        className="consonant-aspect-ratio-1-1-card--title"
      >
        13 Infobit
      </h2>
    </a>
  </div>
  <div
    className="consonant-card-collection--placeholder"
  />
  <div
    className="consonant-card-collection--placeholder"
  />
</div>
`;

exports[`Consonant/Collection Check snapshots should renders correctly with different card style 3`] = `
<div
  className="consonant-card-collection"
  data-testid="consonant-collection"
>
  <div
    className="consonant-aspect-ratio-3-2-card"
    data-testid="consonant-card"
    id="13"
  >
    <div
      className="consonant-aspect-ratio-3-2-card--img"
      data-testid="consonant-card--img"
      style={
        Object {
          "backgroundImage": "url(\\"\\")",
        }
      }
    >
      <span
        className="consonant-aspect-ratio-3-2-card--banner"
        data-testid="consonant-card--banner"
        style={
          Object {
            "backgroundColor": "#CB6F10",
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="consonant-aspect-ratio-3-2-card--banner-icon-wrapper"
        >
          <img
            alt=""
            data-testid="consonant-card--banner-icon"
            loading="lazy"
            src="some-banner-icon"
          />
        </div>
        <span>
          Some Banner Description
        </span>
      </span>
      <a
        className="consonant-aspect-ratio-3-2-card--video-ico"
        href="some-video-videoURL"
        rel="noreferrer"
        tabIndex="0"
        target="_blank"
      >
        Open video link
      </a>
    </div>
    <div
      className="consonant-aspect-ratio-3-2-card--inner"
    >
      
      <h2
        className="consonant-aspect-ratio-3-2-card--title"
      >
        13 Infobit
      </h2>
      
      <div
        className="consonant-card-footer consonant-card-footer_divider"
      >
        <div
          className="consonant-card-footer--row"
          data-cells={3}
        >
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_left"
          >
            <img
              alt=""
              className="consonant-icon-infobit"
              loading="lazy"
              src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/pr_mnemonic.svg"
              width="28"
            />
            <img
              alt=""
              className="consonant-icon-infobit"
              loading="lazy"
              src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/lr_mnemonic.svg"
              width="28"
            />
          </div>
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_center"
          >
            <div
              className="consonant-icon-with-text-infobit"
            >
              <img
                alt=""
                height="22"
                loading="lazy"
                src="https://caas-chimera.s3-us-west-1.amazonaws.com/icons/grey_star.svg"
              />
              <span
                className="consonant-icon-with-text-infobit--text"
              >
                3.7
              </span>
            </div>
          </div>
          <div
            className="consonant-card-footer--cell consonant-card-footer--cell_right"
          >
            <a
              className="consonant-btn-infobit consonant-btn-infobit_cta"
              data-testid="consonant-btn-infobit"
              href=""
              rel="noreferrer"
              tabIndex="0"
              target="_blank"
            >
              <span>
                $9.99
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="consonant-card-collection--placeholder"
  />
  <div
    className="consonant-card-collection--placeholder"
  />
</div>
`;

exports[`Consonant/Collection Check snapshots should renders correctly with different card style 4`] = `
<div
  className="consonant-card-collection"
  data-testid="consonant-collection"
>
  <div
    className="consonant-full-card"
    data-testid="consonant-card"
    id="13"
  >
    <div
      className="consonant-full-card--img"
      data-testid="consonant-card--img"
      style={
        Object {
          "backgroundImage": "url(\\"\\")",
        }
      }
    >
      <span
        className="consonant-full-card--banner"
        data-testid="consonant-card--banner"
        style={
          Object {
            "backgroundColor": "#CB6F10",
            "color": "#FFFFFF",
          }
        }
      >
        <div
          className="consonant-full-card--banner-icon-wrapper"
        >
          <img
            alt=""
            data-testid="consonant-card--banner-icon"
            loading="lazy"
            src="some-banner-icon"
          />
        </div>
        <span>
          Some Banner Description
        </span>
      </span>
      <a
        className="consonant-full-card--video-ico"
        href="some-video-videoURL"
        rel="noreferrer"
        tabIndex="0"
        target="_blank"
      />
    </div>
    <a
      className="consonant-full-card--inner"
      href="ctaLink"
      rel="noreferrer"
      tabIndex="0"
      target="_blank"
      title=""
    >
      
      <h2
        className="consonant-full-card--title"
      >
        13 Infobit
      </h2>
    </a>
  </div>
  <div
    className="consonant-card-collection--placeholder"
  />
  <div
    className="consonant-card-collection--placeholder"
  />
</div>
`;
